--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ textarea {
 
 .home-hero {
   color: #fff;
-  background: linear-gradient(to right, rgba(135, 2, 153, 0.8), rgba(135, 2, 153, 0.8)), url(../../assets/svg/common-bg.svg);
+  background: linear-gradient(to right, rgba(135, 2, 153, 0.8), rgba(135, 2, 153, 0.8)), url('../assets/svg/common-bg.svg');
   background-position: center;
   height: 100vh;
   min-height: 80rem;
@@ -323,7 +323,7 @@ textarea {
           font-size: 1.7rem; } }
 
 .contact {
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url('../assets/svg/common-bg.svg');
   background-size: cover;
   background-position: center; }
   .contact__form-container {
@@ -403,11 +403,12 @@ textarea {
         width: 100%; } }
 
 .project-cs-hero {
-  color: #fff;
-  background: linear-gradient(to right, rgba(179, 0, 185, 0.8), rgba(179, 0, 185, 0.8)), url(../../assets/svg/common-bg.svg);
-  background-size: cover;
-  background-position: center;
-  position: relative; }
+color: #fff;
+background: linear-gradient(to right, rgba(179, 0, 185, 0.8), rgba(179, 0, 185, 0.8)), url('../assets/svg/common-bg.svg');
+background-size: cover;
+background-position: center;
+position: relative;
+}
   @media only screen and (max-width: 37.5em) {
     .project-cs-hero {
       height: unset;
