--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ textarea {
           font-size: 1.7rem; } }
 
 .contact {
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url('../assets/svg/common-bg.svg');
+  background: linear-gradient(to right, rgba(135, 2, 153, 0.8), rgba(135, 2, 153, 0.8)), url('../assets/svg/common-bg.svg');
   background-size: cover;
   background-position: center; }
   .contact__form-container {
@@ -404,7 +404,7 @@ textarea {
 
 .project-cs-hero {
 color: #fff;
-background: linear-gradient(to right, rgba(179, 0, 185, 0.8), rgba(179, 0, 185, 0.8)), url('../assets/svg/common-bg.svg');
+background: linear-gradient(to right, #8100b9, #8100b9), url('../assets/svg/common-bg.svg');
 background-size: cover;
 background-position: center;
 position: relative;
@@ -499,7 +499,7 @@ position: relative;
   width: 100%;
   z-index: 1000;
   background: #000;
-  background: #fff;
+  background: #f1dcf4;
   box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); }
   .header__content {
     display: flex;
