--- a/css/style.css
+++ b/css/style.css
@@ -403,8 +403,9 @@ textarea {
         width: 100%; } }
 
 .project-cs-hero {
-color: #fff;
-background: linear-gradient(to right, #8100b9, #8100b9), url('../assets/svg/common-bg.svg');
+  color: #fff;
+  background: linear-gradient(to right, rgba(135, 2, 153, 0.8), rgba(135, 2, 153, 0.8)), url('../assets/svg/common-bge.svg');
+  background-position: center;
 background-size: cover;
 background-position: center;
 position: relative;
